force-app/main/default/objects/Lead/fields/Adresse_code_postal__c.field-meta.xml
<CustomField>
    <fullName>Adresse_code_postal__c</fullName>
    <label>Adresse: Code postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>