force-app/main/default/objects/Lead/fields/Adresse_D_partement__c.field-meta.xml
<CustomField>
    <fullName>Adresse_D_partement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse: Département</label>
    <referenceTo>D_partement__c</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>