force-app/main/default/objects/Lead/fields/Adresse_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Adresse_e_mail__c</fullName>
    <externalId>true</externalId>
    <label>Adresse Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>