force-app/main/default/objects/Lead/fields/Adresse_etat__c.field-meta.xml
<CustomField>
    <fullName>Adresse_etat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse: Etat</label>
    <referenceTo>Etat__c</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>