force-app/main/default/objects/Lead/fields/Adresse_Ligne_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Ligne_2__c</fullName>
    <label>Adresse: Ligne 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>