force-app/main/default/objects/Lead/fields/Adresse_Ligne_3__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Ligne_3__c</fullName>
    <label>Adresse: Ligne 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>