force-app/main/default/objects/Lead/fields/Adresse_Pays__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse: Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>