force-app/main/default/objects/Lead/fields/Adresse_Ville__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Ville__c</fullName>
    <label>Adresse: Ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>