force-app/main/default/objects/Lead/fields/Ann_e_du_dipl_me__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_du_dipl_me__c</fullName>
    <label>Année du diplôme</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>