force-app/main/default/objects/Lead/fields/Anne_diplome__c.field-meta.xml
<CustomField>
    <fullName>Anne_diplome__c</fullName>
    <label>Année du diplôme</label>
    <length>4</length>
    <type>Text</type>
</CustomField>