force-app/main/default/objects/Lead/fields/Apprenticeship_Meet_Up__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Meet_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apprentissage Forum</label>
    <type>Checkbox</type>
</CustomField>