force-app/main/default/objects/Lead/fields/Besoin_en_recrutement__c.field-meta.xml
<CustomField>
    <fullName>Besoin_en_recrutement__c</fullName>
    <label>Besoin en recrutement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1er emploi</fullName>
            </value>
            <value>
                <fullName>Alternance</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>VIE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>