force-app/main/default/objects/Lead/fields/Career_Forum_2022__c.field-meta.xml
<CustomField>
    <fullName>Career_Forum_2022__c</fullName>
    <description>2022 forum Career events</description>
    <label>Career Forum 2022</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audit Days</fullName>
            </value>
            <value>
                <fullName>Consulting Strategy Forum</fullName>
            </value>
            <value>
                <fullName>Corporate Finance Days</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Challenge</fullName>
            </value>
            <value>
                <fullName>Data &amp; Digital Marketing Days</fullName>
            </value>
            <value>
                <fullName>Graduate Programme Days</fullName>
            </value>
            <value>
                <fullName>Lifescience Days</fullName>
            </value>
            <value>
                <fullName>Luxury Week</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Digital Marketing Days</fullName>
            </value>
            <value>
                <fullName>Recruitment Week</fullName>
            </value>
            <value>
                <fullName>Supply Chain &amp; Purchasing Days</fullName>
            </value>
            <value>
                <fullName>Transformation Digitale Days</fullName>
            </value>
            <value>
                <fullName>Transition Energétique Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>