force-app/main/default/objects/Lead/fields/Careers_Forum__c.field-meta.xml
<CustomField>
    <fullName>Careers_Forum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Careers Forum</label>
    <type>Checkbox</type>
</CustomField>