force-app/main/default/objects/Lead/fields/Careers_Forum_Online__c.field-meta.xml
<CustomField>
    <fullName>Careers_Forum_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Careers Forum Online</label>
    <type>Checkbox</type>
</CustomField>