force-app/main/default/objects/Lead/fields/Centre_d_int_r_t__c.field-meta.xml
<CustomField>
    <fullName>Centre_d_int_r_t__c</fullName>
    <inlineHelpText>centre d’intérêt émis par le prospect</inlineHelpText>
    <label>Centre d&apos;intérêt</label>
    <length>200</length>
    <type>Text</type>
</CustomField>