force-app/main/default/objects/Lead/fields/Comment_avez_vous_connu_le_programme__c.field-meta.xml
<CustomField>
    <fullName>Comment_avez_vous_connu_le_programme__c</fullName>
    <label>Comment avez-vous connu le programme ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presse</fullName>
            </value>
            <value>
                <fullName>Recherche internet</fullName>
            </value>
            <value>
                <fullName>Bouche à oreille</fullName>
            </value>
            <value>
                <fullName>Réseaux sociaux</fullName>
            </value>
            <value>
                <fullName>Les echos</fullName>
            </value>
            <value>
                <fullName>Frenchtech</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Emlyon</fullName>
            </value>
            <value>
                <fullName>Salons / evenements</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>