force-app/main/default/objects/Lead/fields/Commentaire_piste__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_piste__c</fullName>
    <inlineHelpText>Commentaire saisi par le prospect</inlineHelpText>
    <label>Commentaire de la piste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>