force-app/main/default/objects/Lead/fields/Consulting_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Challenge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulting Challenge</label>
    <type>Checkbox</type>
</CustomField>