force-app/main/default/objects/Lead/fields/Conversion_Contact__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Contact__c</fullName>
    <description>Ce champ permet d&apos;indiquer quel type d&apos;enregistrement sera appliqué pour le contact lors de la conversion</description>
    <label>Conversion Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Etudiant</fullName>
            </value>
            <value>
                <fullName>Professionnel</fullName>
            </value>
            <value>
                <fullName>Prospect Etudiant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>