force-app/main/default/objects/Lead/fields/Date_de_cr_ation_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cr_ation_de_l_entreprise__c</fullName>
    <label>Date de création de l&apos;entreprise</label>
    <type>Date</type>
</CustomField>