force-app/main/default/objects/Lead/fields/Date_de_p_remption__c.field-meta.xml
<CustomField>
    <fullName>Date_de_p_remption__c</fullName>
    <label>Date de péremption</label>
    <type>Date</type>
</CustomField>