force-app/main/default/objects/Lead/fields/Digital_Night__c.field-meta.xml
<CustomField>
    <fullName>Digital_Night__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Night Ecully</label>
    <type>Checkbox</type>
</CustomField>