force-app/main/default/objects/Lead/fields/Digital_Night_campus_Paris__c.field-meta.xml
<CustomField>
    <fullName>Digital_Night_campus_Paris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Night Paris</label>
    <type>Checkbox</type>
</CustomField>