force-app/main/default/objects/Lead/fields/Dipl_me__c.field-meta.xml
<CustomField>
    <fullName>Dipl_me__c</fullName>
    <label>Diplôme</label>
    <length>50</length>
    <type>Text</type>
</CustomField>