force-app/main/default/objects/Lead/fields/Domaine_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_tudes__c</fullName>
    <label>Domaine d&apos;études</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>CP littéraires</fullName>
            </value>
            <value>
                <fullName>Droit, Economie, Sciences de Gestion</fullName>
            </value>
            <value>
                <fullName>Ecole de commerce française</fullName>
            </value>
            <value>
                <fullName>Gestion</fullName>
            </value>
            <value>
                <fullName>Ingénieur</fullName>
            </value>
            <value>
                <fullName>Santé</fullName>
            </value>
            <value>
                <fullName>Sciences</fullName>
            </value>
            <value>
                <fullName>Sciences humaines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>