force-app/main/default/objects/Lead/fields/Entreprise_declare__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_declare__c</fullName>
    <label>Entreprise déclarée</label>
    <length>50</length>
    <type>Text</type>
</CustomField>