force-app/main/default/objects/Lead/fields/Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Etablissement__c</fullName>
    <description>Etablissement scolaire</description>
    <inlineHelpText>Etablissement scolaire</inlineHelpText>
    <label>Etablissement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>