force-app/main/default/objects/Lead/fields/Exercice_par_d_faut__c.field-meta.xml
<CustomField>
    <fullName>Exercice_par_d_faut__c</fullName>
    <formula>TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercice par défaut</label>
    <type>Text</type>
</CustomField>