force-app/main/default/objects/Lead/fields/Experience_en_management__c.field-meta.xml
<CustomField>
    <fullName>Experience_en_management__c</fullName>
    <label>Expérience en Management</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>