force-app/main/default/objects/Lead/fields/Finance_consulting_day__c.field-meta.xml
<CustomField>
    <fullName>Finance_consulting_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance &amp; Consulting Forum présentiel</label>
    <type>Checkbox</type>
</CustomField>