force-app/main/default/objects/Lead/fields/Finance_Consulting_Meet_Up_Online__c.field-meta.xml
<CustomField>
    <fullName>Finance_Consulting_Meet_Up_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance &amp; Consulting Forum online</label>
    <type>Checkbox</type>
</CustomField>