force-app/main/default/objects/Lead/fields/Fonctions__c.field-meta.xml
<CustomField>
    <fullName>Fonctions__c</fullName>
    <label>Fonction codée</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille_Fonction__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actuaire</fullName>
            </value>
            <value>
                <fullName>Adjoint Dir.Rel.Hum./Sociales</fullName>
            </value>
            <value>
                <fullName>Adjoint Direct. Admini et Financier</fullName>
            </value>
            <value>
                <fullName>Adjoint Direct. de la Communi.</fullName>
            </value>
            <value>
                <fullName>Adjoint Direct. de Programmes</fullName>
            </value>
            <value>
                <fullName>Adjoint Direct du Personnel</fullName>
            </value>
            <value>
                <fullName>Adjoint Directeur Commercial</fullName>
            </value>
            <value>
                <fullName>Adjoint Directeur d&apos;Etablissement</fullName>
            </value>
            <value>
                <fullName>Adjoint Directeur Juridique</fullName>
            </value>
            <value>
                <fullName>Adjoint Directeur Régional</fullName>
            </value>
            <value>
                <fullName>Adjoint Directeur Ressour.Hum.</fullName>
            </value>
            <value>
                <fullName>Adjoint Resp Gestion Cad./Car.</fullName>
            </value>
            <value>
                <fullName>Administrateur</fullName>
            </value>
            <value>
                <fullName>Agent(Général) d&apos;Assurance</fullName>
            </value>
            <value>
                <fullName>Agent Commercial</fullName>
            </value>
            <value>
                <fullName>Agent de Change</fullName>
            </value>
            <value>
                <fullName>Analyste Financier</fullName>
            </value>
            <value>
                <fullName>Animateur Qualité</fullName>
            </value>
            <value>
                <fullName>Assistant(e) Chef de Prod/Marq.</fullName>
            </value>
            <value>
                <fullName>Assistant(e) de la Formation</fullName>
            </value>
            <value>
                <fullName>Assistant(e) Marketing</fullName>
            </value>
            <value>
                <fullName>Assistant(e) Publicité</fullName>
            </value>
            <value>
                <fullName>Assistant Chef de Marchés</fullName>
            </value>
            <value>
                <fullName>Associé</fullName>
            </value>
            <value>
                <fullName>Attaché(e) Commercial(e)/VRP</fullName>
            </value>
            <value>
                <fullName>Attaché(e) de Direction</fullName>
            </value>
            <value>
                <fullName>Auditeur Externe</fullName>
            </value>
            <value>
                <fullName>Auditeur Interne</fullName>
            </value>
            <value>
                <fullName>Cadre Achats</fullName>
            </value>
            <value>
                <fullName>Cadre Administ. des Ventes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>