force-app/main/default/objects/Lead/fields/Forum_alternance_online__c.field-meta.xml
<CustomField>
    <fullName>Forum_alternance_online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forum alternance online</label>
    <type>Checkbox</type>
</CustomField>