force-app/main/default/objects/Lead/fields/Gamme__c.field-meta.xml
<CustomField>
    <fullName>Gamme__c</fullName>
    <label>Gamme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCOMP. CARRIERE ou CARRIERE RESEAUX</fullName>
            </value>
            <value>
                <fullName>AUTRES OFFRES ?</fullName>
            </value>
            <value>
                <fullName>AUTRES PROGRAMMES</fullName>
            </value>
            <value>
                <fullName>AUTRES SERVICES</fullName>
            </value>
            <value>
                <fullName>EVENEMENTS DE RECRUTEMENT</fullName>
            </value>
            <value>
                <fullName>EVENEMENTS EXPERTS</fullName>
            </value>
            <value>
                <fullName>EVENEMENTS IMAGE / RESEAU</fullName>
            </value>
            <value>
                <fullName>EVENEMENTS PROMOTIONNELS</fullName>
            </value>
            <value>
                <fullName>INFORMER (par différents canaux)</fullName>
            </value>
            <value>
                <fullName>INTRA</fullName>
            </value>
            <value>
                <fullName>MECENAT (CENTRALE LYON - EMLYON)</fullName>
            </value>
            <value>
                <fullName>MECENAT EMLYON</fullName>
            </value>
            <value>
                <fullName>MECENAT FONDATION EMLYON</fullName>
            </value>
            <value>
                <fullName>MESURER LA QUALITE ET LA PERFORMANCE</fullName>
            </value>
            <value>
                <fullName>OFFRES EXECUTIVE DEVELOPMENT hors MBA</fullName>
            </value>
            <value>
                <fullName>Programme certifiant</fullName>
            </value>
            <value>
                <fullName>Programme court</fullName>
            </value>
            <value>
                <fullName>PROGRAMMES ENTREPRENEURS</fullName>
            </value>
            <value>
                <fullName>PROGRAMMES MASTER</fullName>
            </value>
            <value>
                <fullName>PROGRAMMES MASTERES</fullName>
            </value>
            <value>
                <fullName>PROGRAMMES MBA</fullName>
            </value>
            <value>
                <fullName>SPONSORING</fullName>
            </value>
            <value>
                <fullName>TAXE D&apos;APPRENTISSAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>