force-app/main/default/objects/Lead/fields/Global_BBA_Meet_Up__c.field-meta.xml
<CustomField>
    <fullName>Global_BBA_Meet_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global BBA Forum</label>
    <type>Checkbox</type>
</CustomField>