force-app/main/default/objects/Lead/fields/Global_Forum__c.field-meta.xml
<CustomField>
    <fullName>Global_Forum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internship Meet Up</label>
    <type>Checkbox</type>
</CustomField>