force-app/main/default/objects/Lead/fields/Inscription_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande inscription newsletter</label>
    <type>Checkbox</type>
</CustomField>