force-app/main/default/objects/Lead/fields/Int_r_t_de_la_piste__c.field-meta.xml
<CustomField>
    <fullName>Int_r_t_de_la_piste__c</fullName>
    <description>Ce champ répertorie l&apos;ensemble des intérêts de la piste</description>
    <inlineHelpText>Ce champ répertorie l&apos;ensemble des intérêts de la piste</inlineHelpText>
    <label>Intérêt de la piste</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global BBA</fullName>
                <label>BBA</label>
            </value>
            <value>
                <fullName>Global BBA International Admissions</fullName>
                <label>INTBBA</label>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Concours Classes Préparatoires</fullName>
                <label>PREPA</label>
            </value>
            <value>
                <fullName>Programme Grande Ecole - Admission sur Titre France</fullName>
                <label>APA1</label>
            </value>
            <value>
                <fullName>MSc in Management - Grande Ecole</fullName>
                <label>SAI</label>
            </value>
            <value>
                <fullName>MSc in Management - European Triple Degree - Grande Ecole</fullName>
                <label>EMM</label>
            </value>
            <value>
                <fullName>MSc in Digital Marketing and Data Science</fullName>
                <label>DMDS</label>
            </value>
            <value>
                <fullName>MSc in Health Management &amp; Data Intelligence</fullName>
                <label>HMDI</label>
            </value>
            <value>
                <fullName>MSc in International Hospitality Management</fullName>
                <label>IHM</label>
            </value>
            <value>
                <fullName>MSc in Finance</fullName>
                <label>MIFI</label>
            </value>
            <value>
                <fullName>MSc in Luxury Management &amp; Marketing</fullName>
                <label>MMML</label>
            </value>
            <value>
                <fullName>MSc in Sports Industry Management</fullName>
                <label>SIM</label>
            </value>
            <value>
                <fullName>MSc in Strategy &amp; Consulting</fullName>
                <label>SCO</label>
            </value>
            <value>
                <fullName>MSc in Global Innovation &amp; Entrepreneurship</fullName>
                <label>GIE</label>
            </value>
            <value>
                <fullName>MSc in Supply Chain &amp; Purchasing Management</fullName>
                <label>SCPM</label>
            </value>
            <value>
                <fullName>MSc in Cybersecurity &amp; Defense Management</fullName>
                <label>CDM</label>
            </value>
            <value>
                <fullName>MSc in International Marketing &amp; Business Development</fullName>
                <label>IMBD</label>
            </value>
            <value>
                <fullName>MSc in Data Science &amp; Artificial Intelligence Strategy</fullName>
                <label>DSAIS</label>
            </value>
            <value>
                <fullName>MSc in High-End Brand Management</fullName>
                <label>HEBM</label>
            </value>
            <value>
                <fullName>MS Management des Entreprises du Vivant et de l&apos;Agroalimentaire</fullName>
                <label>MAI</label>
            </value>
            <value>
                <fullName>MS Entrepreneuriat et Management de l&apos;Innovation</fullName>
                <label>MEMI</label>
            </value>
            <value>
                <fullName>MS Juriste Manager International</fullName>
                <label>MJ</label>
            </value>
            <value>
                <fullName>MS Juriste Manager International Part-Time</fullName>
                <label>MJPT</label>
            </value>
            <value>
                <fullName>MS Stratégie et Développement d&apos;Affaires Internationales</fullName>
                <label>MSDAI</label>
            </value>
            <value>
                <fullName>MS Transformation Digitale Marketing &amp; Stratégie</fullName>
                <label>MTDMS</label>
            </value>
            <value>
                <fullName>MS Management de la Transition Energétique</fullName>
                <label>MMTE</label>
            </value>
            <value>
                <fullName>MS Transformation Digitale Marketing &amp; Stratégie Part Time</fullName>
                <label>MTDMSPT</label>
            </value>
            <value>
                <fullName>MS Entrepreneuriat et Management de l&apos;Innovation Part Time</fullName>
                <label>MEMIPT</label>
            </value>
            <value>
                <fullName>International MBA</fullName>
                <label>IMBA</label>
            </value>
            <value>
                <fullName>Executive Master Management Général</fullName>
                <label>PGM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>